--- a/Index.css
+++ b/Index.css
@@ -1,3 +1,4 @@
+/*Font หลัก*/
 @import url('https://fonts.googleapis.com/css?family=Kanit&display=swap');
 body {
   font-family: 'Kanit', sans-serif;;
