--- a/Index.css
+++ b/Index.css
@@ -40,7 +40,7 @@ body {
 
 .expert-header {
   position: relative;
-  width: 1350px;
+  width: 100%;
   height: 200px /* Set height as per you needed */;
   display: block;
   background-size: cover !important;
