--- a/Index.css
+++ b/Index.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Kanit&display=swap');
 body {
-  font-family: 'Kanit', sans-serif;;
+  font-family: 'Kanit';
   font-size: 100%;
   line-height: 175%;
+    background-image: url(Image/Backgound.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   margin:0 15%;
+
 }
 /* Add a black background color to the top navigation */
 .topnav {
@@ -29,26 +33,25 @@ body {
 
 /* Add a color to the active/current link */
 .topnav a.active {
-  background-color: #4CAF50;
+  background-color: #0a561a;
   color: white;
-}
-.content {
-  width: 100%;
-  text-align: center;
-  overflow: hidden;
 }
 
 .expert-header {
-  position: relative;
-  width: 100%;
-  height: 200px /* Set height as per you needed */;
-  display: block;
   background-size: cover !important;
-  background: url(Image/Tab.jpg);
-  background-repeat: no-repeat !important;
+  background-image: url(Image/Tab.jpg);
+  position: static;
+  width: 100%;
+  height: 195px /* Set height as per you needed */;
+  display: block;
+}
+
+.content {
+  background-color: #FFF;
+  overflow: hidden;
 }
 .center {
-  display: block;
+  text-align: center !important;
   margin-left: auto;
   margin-right: auto;
 }
