--- a/Index.css
+++ b/Index.css
@@ -27,8 +27,8 @@ body {
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: #4CAF50;
+  color: white;
 }
 
 /* Add a color to the active/current link */
@@ -59,4 +59,7 @@ th, td {
   padding: 15px;
   text-align: left;
   border: #ddd;
+}
+img {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
