--- a/imageAll.css
+++ b/imageAll.css
@@ -20,3 +20,26 @@
   background-color: #4CAF50;
   color: white;
 }
+
+#image2{
+  position: absolute;
+  left: 800px;
+  top: 300px;
+}
+.button2 {
+  position : absolute; 
+  background-color: #0a561a; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  margin: 390px 690px;
+}
+.button2:hover {
+  background-color: #4CAF50;
+  color: white;
+}
